--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vuepic/vue-datepicker": "^3.4.8",
+    "date-fns": "^2.29.3",
     "node-sass": "^7.0.3",
     "vue": "^3.2.39"
   },
